--- a/robocup_bringup/params/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/params/tiago_nav_follow_params.yaml
@@ -200,7 +200,7 @@ global_costmap:
       robot_radius: 0.275
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer", "clear_people_layer"] # , "inflation_layer", "denoise_layer"
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -231,10 +231,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.35
-      denoise_layer:
-        plugin: "nav2_costmap_2d::DenoiseLayer"
-        enabled: True
+        inflation_radius: 0.55
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
       always_send_full_costmap: True
@@ -355,12 +352,12 @@ slam_toolbox:
     loop_search_space_dimension: 8.0
     loop_search_space_resolution: 0.05
     loop_search_space_smear_deviation: 0.03
-    map_file_name: /home/juan/workspaces/robocup/install/robocup_bringup/share/robocup_bringup/maps/lab_robocup
-    map_frame: map
-    map_start_pose:
-    - -0.9
-    - 3.6
-    - 1.56
+    # map_file_name: /home/juan/workspaces/robocup/install/robocup_bringup/share/robocup_bringup/maps/lab_robocup
+    # map_frame: map
+    # map_start_pose:
+    # - -0.9
+    # - 3.6
+    # - 1.56
     map_update_interval: 0.1
     max_laser_range: 20.0
     minimum_angle_penalty: 0.9
